# hanzi-search

./: Cargo.toml  README.md  chai.txt  index.html
.github/workflows/: release.yml
src/: ids.rs  lib.rs  main.rs
